--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "2.0.2",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
@@ -23,7 +23,12 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["security", "education", "vulnerabilities", "ecommerce"],
+  "keywords": [
+    "security",
+    "education",
+    "vulnerabilities",
+    "ecommerce"
+  ],
   "author": "CHECK-MARX",
   "license": "MIT"
 }
