--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "express-session": "^1.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "2.0.2",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
