--- a/package.json
+++ b/package.json
@@ -8,18 +8,17 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6",
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^4.21.2",
-    "express-rate-limit": "^6.8.1",
-    "express-session": "^1.18.2",
-    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
     "multer": "2.0.2",
-    "sqlite3": "^5.1.7"
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^6.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
