--- a/package.json
+++ b/package.json
@@ -8,22 +8,28 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "multer": "^1.4.5-lts.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.8.1",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
-    "express-rate-limit": "^6.8.1"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["security", "education", "vulnerabilities", "ecommerce"],
+  "keywords": [
+    "security",
+    "education",
+    "vulnerabilities",
+    "ecommerce"
+  ],
   "author": "CHECK-MARX",
   "license": "MIT"
 }
